<rdar://problem/11025217> [Mac] Assertion failure in collectComplexTextRunsForCharactersCoreText https://bugs.webkit.org/show_bug.cgi?id=77044

Reviewed by Sam Weinig.

Source/WebCore:

Test: platform/mac/fast/text/core-text-fallback-to-unknown-font.html

Handle the case of Core Text choosing a fallback font that NSFontManager cannot find by name.

* platform/graphics/FontCache.h:
(FontCache): Made ComplexTextController a friend class.
* platform/graphics/mac/ComplexTextControllerCoreText.mm:
(WebCore::ComplexTextController::collectComplexTextRunsForCharactersCoreText): Removed the
failing assertion, which was not true, and added code to handle the case where a font
cannot be found by name by using the font as returned from Core Text.

LayoutTests:

* platform/mac/fast/text/core-text-fallback-to-unknown-font-expected.txt: Added.
* platform/mac/fast/text/core-text-fallback-to-unknown-font.html: Added.



Canonical link: https://commits.webkit.org/98218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110642 268f45cc-cd09-0410-ab3c-d52691b4dbfc